@startuml

entity Users{
    * id INT AUTO_INCREMENT NOT NULL <<PK>>
    --
    * timestamp TIMESTAMP NOT NULL
}

entity Product_Categories{
    * id INT AUTO_INCREMENT NOT NULL <<PK>>
    --
    * name VARCHAR(100) NOT NULL
    * created_at TIMESTAMP NOT NULL
    * updated_at TIMESTAMP NOT NULL
}

entity Products{
    * id INT AUTO_INCREMENT NOT NULL <<PK>>
    --    
    * product_category_id <<FK>>
    * name VARCHAR(100) NOT NULL
    * description TEXT NOT NULL
    * created_at TIMESTAMP NOT NULL
    * updated_at TIMESTAMP NOT NULL
}

entity Transaction{
    * id INT AUTO_INCREMENT NOT NULL <<PK>>
    --
    * users_id INT NOT NULL <<FK>>
    * product_id INT NOT NULL <<FK>>
    * qty INT DEFAULT 0
    * address TEXT NOT NULL
    * created_at TIMESTAMP NOT NULL
    * updated_at TIMESTAMP NOT NULL
}

Users ||--o{ Transaction
Product_Categories ||--|{Products
Products ||--o{ Transaction
@enduml